==> silabs-daveclark/wc-dx-sandbox/host/platforms/EFR32/hal/rsi_hal_mcu_interrupt.c <==
/*************************************************************************
 * 
 * Copyright (c) 2019 Redpine Signals Incorporated. All Rights Reserved.
 * 
 * NOTICE:  All  information  contained  herein is, and  remains  the  property of 
 * Redpine Signals Incorporated. The intellectual and technical concepts contained
 * herein  are  proprietary to  Redpine Signals Incorporated and may be covered by 
 * U.S. and Foreign Patents, patents in process, and are protected by trade secret
 * or copyright law. Dissemination  of this  information or reproduction  of  this
 * material is strictly forbidden unless prior written permission is obtained from
 * Redpine Signals Incorporated.
 */

/**
 * Includes
 */
#include "rsi_driver.h"
#include "em_gpio.h"
#include "em_usart.h"



typedef void (* UserIntCallBack_t)(void);

UserIntCallBack_t call_back;

// Size of the data buffers
#define BUFLEN  10
// Outgoing data
uint8_t outbuf[BUFLEN];

// Incoming data
uint8_t inbuf[BUFLEN];

// Position in the buffer
uint32_t bufpos;

/**************************************************************************//**
 * @brief
 *    USART0 transmit interrupt handler.
 *****************************************************************************/
void USART0_TX_IRQHandler(void)
{
  /*
   * Save byte received concurrent with the transmission of the last bit of
   * the previous outgoing byte, and increment the buffer position to the
   * next byte.
   */
  inbuf[bufpos++] = USART0->RXDATA;

  // If there are still bytes left to send, transmit the next one
  if (bufpos < BUFLEN)
    USART0->TXDATA = outbuf[bufpos];

  // Clear the requesting interrupt before exiting the handler
  USART_IntClear(USART0, USART_IF_TXC);
}

void GPIO_ODD_IRQHandler(void)
{

  if(call_back!=NULL)
    (*call_back)();

  GPIO_IntClear(0xAAAA); //0xffff
 // GPIO_IntClear(0xAAAA);
}
//void USART0_TX_IRQHandler(void)   //GPIO_ODD_IRQHandler
//{
//  if(call_back!=NULL)
//    (*call_back)();
//
//  //GPIO_IntClear(0xFFFF); //0xffff
//  USART_IntClear(USART0, USART_IF_TXC);
//
//  //USART_IntClear(USART0, USART_IF_RXDATAV);
//}
/*===================================================*/
/**
 * @fn           void rsi_hal_intr_config(void (* rsi_interrupt_handler)())
 * @brief        Starts and enables the SPI interrupt
 * @param[in]    rsi_interrupt_handler() ,call back function to handle interrupt
 * @param[out]   none
 * @return       none
 * @description  This HAL API should contain the code to initialize the register/pins
 *               related to interrupts and enable the interrupts.
 */
void rsi_hal_intr_config(void (* rsi_interrupt_handler)(void))
{
  
  call_back = rsi_interrupt_handler;
  //! Configure interrupt pin/register in input mode and register the interrupt handler
  
  return;

}


/*===================================================*/
/** 
 * @fn           void rsi_hal_intr_mask(void)
 * @brief        Disables the SPI Interrupt
 * @param[in]    none
 * @param[out]   none
 * @return       none
 * @description  This HAL API should contain the code to mask/disable interrupts.
 */
void rsi_hal_intr_mask(void)
{
 
  //! Mask/Disable the interrupt 
  NVIC_DisableIRQ(GPIO_ODD_IRQn); //GPIO_ODD_IRQn
  return;

}


/*===================================================*/
/**
 * @fn           void rsi_hal_intr_unmask(void)
 * @brief        Enables the SPI interrupt
 * @param[in]    none  
 * @param[out]   none
 * @return       none
 * @description  This HAL API should contain the code to enable interrupts.
 */
void rsi_hal_intr_unmask(void)
{
  NVIC_EnableIRQ(GPIO_ODD_IRQn);
  //! Unmask/Enable the interrupt
  
  return;

}



/*===================================================*/
/**
 * @fn           void rsi_hal_intr_clear(void)
 * @brief        Clears the pending interrupt
 * @param[in]    none
 * @param[out]   none
 * @return       none
 * @description  This HAL API should contain the code to clear the handled interrupts.
 */
void rsi_hal_intr_clear(void)
{
   //! Clear the interrupt
   
   return;

 
}


/*===================================================*/
/**
 * @fn          void rsi_hal_intr_pin_status(void)
 * @brief       Checks the SPI interrupt at pin level
 * @param[in]   none  
 * @param[out]  uint8_t, interrupt status 
 * @return      none
 * @description This API is used to check interrupt pin status(pin level whether it is high/low).
 */	
uint8_t rsi_hal_intr_pin_status(void)
{

  volatile uint8_t status = 0;

  //! Return interrupt pin  status(high(1) /low (0))
  
  status = NVIC_GetPendingIRQ(GPIO_ODD_IRQn);
  return status;
}
